Converting to Spring based

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -2,6 +2,7 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
+app.topHint = "CafeUno"
 username.label = Username
 password.label = Password
 login.label = Login
